tests/language_modules/14_comments_whitespace/valid/nested_marker_inside_line_comment.vf
module NestedMarkerInsideLineComment

-- /* this marker is inside a line comment and is ignored
procedure main()
is
    check true
end main

end NestedMarkerInsideLineComment