tests/language_modules/14_comments_whitespace/invalid_syntax/unterminated_block_comment.vf
module UnterminatedBlockComment

/* this block comment never closes
procedure main()
is
    check true
end main

end UnterminatedBlockComment